--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -995,7 +995,9 @@ z-index: 9;
 display: none;
 width:900px;
 }
-
+#saRange{
+width:1000px;
+}
 /*========================================== temp css =========================================================*/
 .userPolicyContentWrap > p {
 padding: 8px;
@@ -1660,4 +1662,8 @@ ul.listDrop li.list-drop-button-none > p {
 	background: #fff;
 	margin-bottom: 20px;
 	text-align: center;
+}
+/* 경관분석 달력*/
+.tui-datepicker{
+z-index:100;
 }
