시민참여 - css 수정 (마우스 오버 색상 변경) 등등

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -523,6 +523,10 @@ border-radius: 5px;
 border: 1px solid #c7e0f2;
 background-color: #ecf7ff;
 }
+.comment > li:hover {
+background-color: #c7e0f2;
+cursor: pointer;
+}
 .comment li > p {
 flex: auto;
 padding-right: 10px;
