시민참여 사용자 css수정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -514,7 +514,7 @@ background-color: #51515b;
 }
 
 /*  ///// 시민참여 ///// */
-.comment > li {
+.commentWrap > li.comment {
 display: flex;
 position: relative;
 margin-bottom: 10px;
@@ -523,49 +523,66 @@ border-radius: 5px;
 border: 1px solid #c7e0f2;
 background-color: #ecf7ff;
 }
-.comment > li:hover {
+.commentWrap > li.comment:hover {
 background-color: #c7e0f2;
 cursor: pointer;
 }
-.comment li > p {
+.commentWrap > li.comment:hover .title {
+text-decoration: underline;
+}
+.commentWrap > li.comment > p {
 flex: auto;
 padding-right: 10px;
 }
-.comment li > p:first-child {
+.commentWrap > li.comment > p:first-child {
 min-width: 215px;
 }
-.comment span.id {
+.commentWrap > li.none {
+display: flex;
+position: relative;
+margin-bottom: 10px;
+padding: 7px;
+border-radius: 5px;
+border: 1px solid #d9d9d9;
+background-color: white;
+cursor: default;
+}
+.commentWrap span.id {
 display: block;
 color: #999;
 }
-.comment p.count {
+.commentWrap p.count {
 min-width: 40px;
 padding: 8px 5px 0 15px;
 font-size: 17px;
 font-weight: bold;
 text-align: right;
-background: url(/images/ko/ico.png) no-repeat 0 -487px;
 margin-left:-10px;
+color: #287be4;
+/* background: url(/images/ko/ico.png) no-repeat 0 -968px; */
 }
 
 
 /* 의견보기 */
 .commentView {
-margin: 10px 0 20px;
 }
 .commentView > div {
 margin-bottom: 5px;
 }
-.commentView > .title {
+.commentView .title {
 margin-bottom: 10px;
 padding: 10px 0 0 25px;
-font-size: 18px;
+font-size: 16px;
 font-weight: bold;
 border-radius: 5px;
 background: url(/images/ko/ico.png) no-repeat 3px -639px;
 }
+.commentView .modify {
+float: right;
+text-decoration: underline;
+}
 .commentView > .con {
-max-height: 250px;
+max-height: 240px;
 overflow-y: auto;
 padding: 10px;
 font-size: 14px;
@@ -590,7 +607,7 @@ padding-right: 10px;
 }
 .agreeWrap p.agree {
 padding: 0 0 0 25px;
-background: url(/images/ko/ico.png) no-repeat 0 -495px;
+background: url(/images/ko/ico.png) no-repeat 0 -968px;
 }
 .agreeWrap span.id {
 display: block;
@@ -598,19 +615,19 @@ color: #999;
 }
 
 .agreeCount {
-margin: 7px 0;
+margin-top: 20px;
 }
 .agreeCount > span {
 color: #287be4;
 }
 .agreeNew {
-margin: 20px 0;
+margin: 10px 0;
 }
 .agreeNew > input {
 width: 65%;
 padding: 7px 7px 7px 30px;
 border: 2px solid #555;
-background: url(/images/ko/ico.png) no-repeat 7px -490px;
+background: url(/images/ko/ico.png) no-repeat 6px -971px;
 }
 
 /* 의견등록 */
@@ -1682,6 +1699,11 @@ ul.listDrop li.list-drop-button-none > p {
 .button-group-center {
 	background: #fff;
 	margin-bottom: 20px;
+	text-align: center;
+}
+.button-group-top-center {
+	background: #fff;
+	margin-top: 20px;
 	text-align: center;
 }
 /* 경관분석 달력*/
