href tag 가 아닌곳에 under line 이 있으면 안됨. 향후 사용자 페이지가 추가 되는 시점에 링크 추가 예정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -50,7 +50,7 @@ text-align: right;
 width: calc(100% - 500px);
 }
 .signArea > span {
-border-bottom: 1px solid #fff;
+/*	border-bottom: 1px solid #fff;	*/
 }
 .signArea * {
 vertical-align: middle;
