레이어 css 수정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1411,7 +1411,7 @@ background-repeat: no-repeat;
 ul.layerList li p.depthOne {
 font-weight: bold;
 font-size: 15px;
-background-color: #ececec;
+background-color: #ffffff;
 }
 ul.layerList li.on p.depthOne {
 font-weight: bold;
