--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -50,7 +50,7 @@ text-align: right;
 width: calc(100% - 500px);
 }
 .signArea > span {
-border-bottom: 1px solid #fff;
+/*	border-bottom: 1px solid #fff;	*/
 }
 .signArea * {
 vertical-align: middle;
@@ -351,21 +351,21 @@ background-position: -151px -52px;
 }
 .ctrlWrap div > button.print.on {
 background-position: -151px -102px;
-background-color: #fff600;		
+background-color: #fff600;
 }
 .ctrlWrap div > button.save {
 background-position: -351px -52px;
 }
 .ctrlWrap div > button.save.on {
 background-position: -351px -102px;
-background-color: #fff600;		
+background-color: #fff600;
 }
 .ctrlWrap div > button.magoSet {
 background-position: -85px -52px;
 }
 .ctrlWrap div > button.magoSet.on {
 background-position: -85px -102px;
-background-color: #fff600;	
+background-color: #fff600;
 }
 
 .ctrlWrap div > input {
@@ -492,18 +492,22 @@ background: url(/images/ko/ico.png) no-repeat -462px -697px;
 
 /* 양쪽으로 나눠진 구분DIV - 정연화 수정 */
 .bothSide {
-display: flex;
+/* display: flex; */
 /* margin-bottom: 3px; */
+flex: auto;
 margin-bottom: 5px;
+display: list-item;
 }
 .bothSide > div:first-child {
 /* margin-top: 8px; */
+float: left;
 }
 .bothSide > div:first-child > span {
 color: #287be4
 }
 .bothSide > div:last-child {
-text-align: right;
+/* text-align: right; */
+float: right;
 }
 .dataBtns > button {
 padding: 4px 10px;
@@ -1052,7 +1056,7 @@ width:1000px;
 
 
 /* ////////// POLICY ////////// */
-/* 
+/*
 .userPolicyContentWrap > p {
 padding: 8px;
 font-weight: bold;
@@ -1301,7 +1305,7 @@ animation: spinning 0.8s infinite linear;
 	transform: rotate(360deg);
 }
 }
-/* 
+/*
 #mapPolicy {
 width: 110px;
 height: 50px;
@@ -1407,12 +1411,12 @@ background-repeat: no-repeat;
 ul.layerList li p.depthOne {
 font-weight: bold;
 font-size: 15px;
-background-color: #ececec;
+background-color: #ffffff;
 }
 ul.layerList li.on p.depthOne {
 font-weight: bold;
 font-size: 15px;
-background-color: #454554;
+background-color: #287be4;
 color: white;
 }
 ul.layerList li p.depthOne > span.folder {
@@ -1428,10 +1432,10 @@ ul.layerList li.on > p > span.folder {
 background-position: 0 -101px;
 }
 ul.layerList li > p > span.depthThree {
-background-position: 0 -300px;
+background-position: 0 -298px;
 }
 ul.layerList li.on > p > span.depthThree {
-background-position: 0 -347px;
+background-position: 0 -348px;
 }
 ul.layerList li > ul {
 display: none;
